fix truncation functionality

--- a/src/app/search-results/search-results.component.scss
+++ b/src/app/search-results/search-results.component.scss
@@ -106,7 +106,7 @@
   text-overflow: ellipsis;
   position: relative;
   color: #555;
-  transition: max-height 0.3s ease-out;
+  transition: max-height 0.3s ease-out, -webkit-line-clamp 0.3s ease-out;
 }
 
 .dataset-description.expanded {
